# FRA532_LAB1_6702_6703

./: .gitignore  README.md  front_wheel_angles.csv  odom_estimated.csv  odom_gazebo_limo.csv
localization_ekf/: CMakeLists.txt  package.xml
localization_ekf/config/: ekf-singletrack.yaml  ekf-yawrate.yaml  ekf.yaml
localization_ekf/launch/: ekf-doubletrack.launch.py  ekf-singletrack.launch.py  ekf-yawrate.launch.py  ekf.launch.py
localization_ekf/result/doubletrack/PID/: dead_reckoning.csv  ekf_estimated.csv  gps_obs.csv
localization_ekf/result/doubletrack/pp/: dead_reckoning.csv  gps_obs.csv
localization_ekf/result/doubletrack/stanlee/: dead_reckoning.csv  ekf_estimated.csv
localization_ekf/result/single_track/PID/: dead_reckoning.csv  ekf_estimated.csv  gps_obs.csv
localization_ekf/result/single_track/purepursuit/: dead_reckoning.csv  ekf_estimated.csv  gps_obs.csv
localization_ekf/result/yawrate/PID/: dead_reckoning.csv  ekf_estimated.csv  gps_obs.csv
localization_ekf/result/yawrate/purepursuit/: dead_reckoning.csv  ekf_estimated.csv  gps_obs.csv
localization_ekf/result/yawrate/stanlee/: dead_reckoning.csv  ekf_estimated.csv
localization_ekf/scripts/: Visualization_test.py  dummy_script.py  ekf-single.py  gps.py  plot_data.py  plot_gps.py  save_data.py
localization_ekf/scripts/basic-model/: pid-basic.py  stanlee-basic.py
localization_ekf/scripts/double_track/: Visualization_test.py  ackerman_odom_double_track.py  ekf-double.py  odom_filtered_doubletrack.py  pid_doubletrack.py  pp_doubletrack.py  save_data.py  stanlee_doubletrack.py
localization_ekf/scripts/double_track/pid/: odom_filtered.py  (+1 more)
localization_ekf/scripts/single_track/: ackerman_odom_single_track.py  ekf-single.py  gps.py  pid_singletrack.py  pp_singletrack.py  stanlee_singletrack.py
localization_ekf/scripts/singletrack-noslip/: ekf-single-noslip.py  pid-noslip.py  pp-noslip.py  stanlee-noslip.py
localization_ekf/scripts/yawrate/: Visualization_test.py  ackerman_yaw_rate_odom.py  ekf.py  estimate.py  gps-yawrate.py  pid_yawrate.py  plot_data.py  pp_yawrate.py  save_data.py  stanlee_yawrate.py
localization_ekf/scripts/yawrate-noslip/: ekf-yawrate-noslip.py
localization_ekf/src/: cpp_node.cpp
(+274 files in other folders)
